feat(backend): recommendations
